# blackout-backup

./: .gitignore  Cargo.toml  README.md  build.rs  post-build.ps1
doc/: Assignment.md  Requirements.md
src/: audio.rs  backup.rs  logger.rs  main.rs  mouse.rs  single_instance.rs  state.rs  tray.rs
src/echo/: main.rs  mod.rs
src/installer/: install.ps1  uninstall.ps1
