[package]
name = "blackout"
version = "0.1.0"
authors = ["Emanuele Messina <emanuelemessina.em@gmail.com>"]
edition = "2021"
license-file = "LICENSE"
readme = "README.md"
description = "Perform a preconfigured backup with a mouse gesture"
keywords = ["backup", "black-screen"]

[[bin]]
name = "blackout"
path = "src/main.rs"

[[bin]]
name = "echo"
path = "src/echo/main.rs"

[dependencies]
chrono = "0.4"
fs2 = "0.4"
native-dialog = "0.7"
tray-item = "0.10"
rdev = "0.5"
soloud = "1.0"
tokio = { version = "1", features = ["full"] }
mouse_position = "0.1"
winapi = { version = "0.3", features = ["consoleapi", "wincon"] }
glob = "0.3"
walkdir = "2.5"
sysinfo = "0.31"
lazy_static = "1.5"
chksum-hash-md5 = "0.0.1"
crossbeam = { version = "0.8", features = ["crossbeam-channel"] }

[build-dependencies]
winres = "0.1"